--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^4.12.4",
     "nodemon": "^1.12.1",
     "rxjs": "^5.4.2",
+    "underscore": "^1.8.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
