--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node ./src/backend/server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "dev-server": "nodemon ./src/backend/server.js"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
