--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "airbnb",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "8.6.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "node ./src/backend/server.js",
