--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "node ./src/backend/server.js",
+    "start": "http-server dist/",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build"
+    "preinstall":   "npm install -g http-server",
+    "postinstall":  "ng build --prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.4.5",
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/animations": "^4.4.6",
     "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.2.4",
@@ -40,8 +43,6 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.5",
-    "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
